Added contact page

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <title>Contact</title>
     <meta name="author" content="Savaryna Viktoriia IP-22">
 
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,70 +21,65 @@
             </ul> 
         </nav>
     </header>
+    <section id="contact_page">
+        <div class="main">
+            <h1 class="main_subtitle_1">Contact</h1>
+        <p class="main_subtext">
+            let`s meet together
+        </p>
+        </div>
+    </section>
+    <section>
+        <div class="cont_container">
+            <div class="contact-box">
+                <div class="left">
+                    <div class="contact_table">
+                        <table cellpadding = "15" cellspacing="5">
+                            <colgroup>
+                                <col style="width:auto"/><col/>
+                            </colgroup>    
+                            <thead>          
+                                <tr>
+                                    <th colspan="4" class="cont_us">Contact us</th>
+                                </tr>
+                            </thead> 
+                            <tbody>
+                                <tr>
+                                    <td colspan="4">
+                                        <p style="color:aqua" class="adress">Address</p>
+                                        <p>Main Street 15, 
+                                            <br>Lutsk, Volyn, Ukraine,
+                                            <br>43025</p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p style="color:aqua">Phone</p>
+                                        <p>+380666162932</p>
+                                    </td>
+                                    <td>
+                                        <p style="color:aqua">Email</p>
+                                        <p>name.surname
+                                            <br>@gmail.com</p>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="right">
+                    <h2>Contact Us</h2>
+                    <input type="text" class="field" placeholder="Your Name">
+                    <input type="text" class="field" placeholder="Your Email">
+                    <input type="text" class="field" placeholder="Phone">
+                    <textarea placeholder="Message" class="field"></textarea>
+                    <button class="btn">Send</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <main>
-        <table align="left" cellpadding = "25" cellspacing="15">
-            <colgroup>
-                <col style="width:100px"/><col/>
-            </colgroup>    
-            <thead>          
-                <tr align="center">
-                    <th colspan="4">Our team</th>
-                </tr>
-            </thead> 
-            <tbody>
-                <tr align="center" bgcolor="white">
-                    <td colspan="4">
-                        <img src="https://cdn-icons-png.flaticon.com/256/3135/3135789.png" width="100" alt="spotify">
-                        <p>Name Surname</p>
-                        <p>Position</p>
-                    </td>
-                </tr>
-                <tr align="right" bgcolor="white">
-                    <td>
-                        <img src="https://cdn-icons-png.flaticon.com/512/4140/4140071.png" width="100" alt="spotify">
-                        <p>Name Surname</p>
-                        <p>Position 1</p>
-                    </td>
-                    <td>
-                        <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSMuZEcYYN2YYO5WAmhmhwnSJo7JyPn5Q-eih8MdZnvGIAFXqS4" width="100" alt="spotify">
-                        <p>Name Surname</p>
-                        <p>Position 2</p>
-                    </td>
-                    <td>
-                        <img src="https://netsandturf.com/assets/images/team/user-1.png" width="100" alt="spotify">
-                        <p>Name Surname</p>
-                        <p>Position 3</p>
-                    </td>
-                    <td>
-                        <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcS02jOWrcM7KCYuEgESmP2P6rJq_O0i2Zqw0QDIdTKf3AmZWk1H" width="100" alt="spotify">
-                        <p>Name Surname</p>
-                        <p>Position 4</p>
-                    </td>
-                </tr>
-                <tr align="right" bgcolor="white">
-                    <td>
-                        <img src="https://cdn-icons-png.flaticon.com/512/4140/4140071.png" width="100" alt="spotify">
-                        <p>Name Surname</p>
-                        <p>Position 5</p>
-                    </td>
-                    <td>
-                        <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSMuZEcYYN2YYO5WAmhmhwnSJo7JyPn5Q-eih8MdZnvGIAFXqS4" width="100" alt="spotify">
-                        <p>Name Surname</p>
-                        <p>Position 6</p>
-                    </td>
-                    <td>
-                        <img src="https://netsandturf.com/assets/images/team/user-1.png" width="100" alt="spotify">
-                        <p>Name Surname</p>
-                        <p>Position 7</p>
-                    </td>
-                    <td>
-                        <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcS02jOWrcM7KCYuEgESmP2P6rJq_O0i2Zqw0QDIdTKf3AmZWk1H" width="100" alt="spotify">
-                        <p>Name Surname</p>
-                        <p>Position 8</p>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
         <iframe name="Frame" scrolling="no" 
         style="width:150px; height:300px; float:right; border:ridge 2px; margin-bottom: 10px"
         src = "index.html"></iframe>
