--- a/platforms.html
+++ b/platforms.html
@@ -8,6 +8,17 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Fredoka" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+
+    <style>
+        a {
+            line-height: 1.5;
+        }
+        td a:hover {
+            color: brown;
+            transition: 0.5s ease;
+        }
+    </style>
+
 </head>
 <body>
     <header>
