--- a/platforms.html
+++ b/platforms.html
@@ -21,6 +21,19 @@
 
 </head>
 <body>
+    <!-- <script>
+        let number = prompt('How many platforms do you use?', 5);
+        if (number != null  ){
+            alert("Thank you for response!");
+        };
+
+        document.body.style.backgroundColor = "blue";
+
+        setTimeout(function() {
+            document.body.style.backgroundColor = "";
+        }, 30000);
+
+    </script> -->
     <header>
         <img src="images/logo.png" alt="logo" class="logo">
         <nav>
