--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
         <iframe name="Frame" scrolling="no" src = "thanks.html" id="frame"></iframe>
     </main>
     <script>
-        var button = document.getElementById("sendBtn");
+        let button = document.getElementById("sendBtn");
 
         button.addEventListener("click", function() {
             let confirmation = confirm("Are you sure?");
