--- a/platforms.html
+++ b/platforms.html
@@ -21,7 +21,7 @@
 
 </head>
 <body>
-    <!-- <script>
+    <script>
         let number = prompt('How many platforms do you use?', 5);
         if (number != null  ){
             alert("Thank you for response!");
@@ -33,7 +33,7 @@
             document.body.style.backgroundColor = "";
         }, 30000);
 
-    </script> -->
+    </script>
     <header>
         <img src="images/logo.png" alt="logo" class="logo">
         <nav>
